Add basic experiment example

--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4d8e180d",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d598292",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d899afc2",
    "metadata": {},
@@ -41,7 +38,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -62,7 +58,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -71,12 +66,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
    "source": [
-    "Next, we create our test inputs. For this example, we'll use a prompt template, which uses [jinja](https://jinja.palletsprojects.com/en/3.1.x/) for templating."
+    "Next, we create our test inputs."
    ]
   },
   {
@@ -93,12 +87,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "273e9908",
    "metadata": {},
    "source": [
-    "Now we can define an experimentation harness for our inputs and model. We could also pass model arguments if, for example, we wanted to change the model temperature."
+    "Now we can define an experimentation harness to compare two models."
    ]
   },
   {
@@ -112,7 +105,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -157,14 +149,14 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>[The World Series in 2020 was played at Globe Life Field in Arlington, Texas.]</td>\n",
+       "      <td>[George Washington]</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>gpt-3.5-turbo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>[The World Series in 2020 was played at Globe Life Field in Arlington, Texas.]</td>\n",
+       "      <td>[George Washington]</td>\n",
        "      <td>0.000002</td>\n",
        "      <td>gpt-3.5-turbo-0613</td>\n",
        "    </tr>\n",
@@ -177,13 +169,9 @@
        "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]  \\\n",
        "1  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]   \n",
        "\n",
-       "                                                                      response(s)   \n",
-       "0  [The World Series in 2020 was played at Globe Life Field in Arlington, Texas.]  \\\n",
-       "1  [The World Series in 2020 was played at Globe Life Field in Arlington, Texas.]   \n",
-       "\n",
-       "    latency               model  \n",
-       "0  0.000004  gpt-3.5-turbo       \n",
-       "1  0.000002  gpt-3.5-turbo-0613  "
+       "           response(s)   latency               model  \n",
+       "0  [George Washington]  0.000004  gpt-3.5-turbo       \n",
+       "1  [George Washington]  0.000002  gpt-3.5-turbo-0613  "
       ]
      },
      "metadata": {},
@@ -196,7 +184,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be9c5ef5",
    "metadata": {},
@@ -205,7 +192,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "31776228",
    "metadata": {},
@@ -214,12 +200,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4b2ae9d9",
    "metadata": {},
    "source": [
-    "We can now record our manual evaluations of the output from each model."
+    "We can now record our manual evaluations of the output from each model. We are evaluating the quality of the first model, based on it's side-by-side comparisons from other models."
    ]
   },
   {
@@ -233,7 +218,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "daffc0d6be3f43abaf0191a105146e31",
+       "model_id": "b07a6a0a1c0c436d9d530634bca0482c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +258,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -284,7 +269,7 @@
        "0  [{'role': 'system', 'content': 'You are a helpful assistant.'}, {'role': 'user', 'content': 'Who won the world series in 2020?'}]  \\\n",
        "\n",
        "   feedback  \n",
-       "0  1         "
+       "0  0         "
       ]
      },
      "metadata": {},
