--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c02b0509",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -19,7 +17,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -41,7 +38,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "df3934db",
    "metadata": {},
@@ -63,7 +59,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7b106a04",
    "metadata": {},
@@ -72,7 +67,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e43545ff",
    "metadata": {},
@@ -92,7 +86,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9d152fdf",
    "metadata": {},
@@ -107,11 +100,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(\"text-davinci-003\", prompt_templates, user_inputs)"
+    "harness = PromptTemplateExperimentationHarness(\"text-davinci-003\", \n",
+    "                                               prompt_templates, \n",
+    "                                               user_inputs,\n",
+    "                                               model_arguments={\"temperature\": 0.9})"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e6f5463a",
    "metadata": {},
@@ -155,26 +150,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe first President of the United States was George Washington.]</td>\n",
-       "      <td>3.667436</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad,]</td>\n",
-       "      <td>1.065293</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe first president of the United States was George Washington.]</td>\n",
-       "      <td>3.060034</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad.]</td>\n",
-       "      <td>1.239039</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -187,17 +182,11 @@
        "2  Respond the following query: Who was the first president?              \n",
        "3  Respond the following query: Who was the first president of India?     \n",
        "\n",
-       "                                                             response(s)   \n",
-       "0  [\\n\\nThe first President of the United States was George Washington.]  \\\n",
-       "1  [\\n\\nThe first President of India was Dr. Rajendra Prasad,]             \n",
-       "2  [\\n\\nThe first president of the United States was George Washington.]   \n",
-       "3  [\\n\\nThe first President of India was Dr. Rajendra Prasad.]             \n",
-       "\n",
-       "    latency  \n",
-       "0  3.667436  \n",
-       "1  1.065293  \n",
-       "2  3.060034  \n",
-       "3  1.239039  "
+       "                                                  response(s)   latency  \n",
+       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000005  \n",
+       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
+       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
+       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  "
       ]
      },
      "metadata": {},
@@ -210,7 +199,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b35caa9a",
    "metadata": {},
@@ -259,28 +247,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>{'input': 'Who was the first president of India?'}</th>\n",
-       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad,]</td>\n",
-       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad.]</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>{'input': 'Who was the first president?'}</th>\n",
-       "      <td>[\\n\\nThe first President of the United States was George Washington.]</td>\n",
-       "      <td>[\\n\\nThe first president of the United States was George Washington.]</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "prompt_template                                                                  Answer the following question: {{input}}   \n",
-       "user_input                                                                                                                  \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nThe first President of India was Dr. Rajendra Prasad,]            \\\n",
-       "{'input': 'Who was the first president?'}           [\\n\\nThe first President of the United States was George Washington.]   \n",
+       "prompt_template                                                       Answer the following question: {{input}}   \n",
+       "user_input                                                                                                       \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \\\n",
+       "{'input': 'Who was the first president?'}           [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]   \n",
        "\n",
-       "prompt_template                                                                    Respond the following query: {{input}}  \n",
-       "user_input                                                                                                                 \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nThe first President of India was Dr. Rajendra Prasad.]            \n",
-       "{'input': 'Who was the first president?'}           [\\n\\nThe first president of the United States was George Washington.]  "
+       "prompt_template                                                         Respond the following query: {{input}}  \n",
+       "user_input                                                                                                      \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \n",
+       "{'input': 'Who was the first president?'}           [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  "
       ]
      },
      "metadata": {},
@@ -292,7 +280,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -301,17 +288,16 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "To evaluate the results, we'll define an eval function. Since we are prompting the model to echo our input, we can use semantic distance to check if the model's response is similar to the user input."
+    "To evaluate the results, we'll define an eval function. We can use semantic distance to check if the model's response is similar to our expected output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "63de3014",
    "metadata": {},
    "outputs": [],
@@ -342,49 +328,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "0a277d94",
-   "metadata": {},
-   "source": [
-    "Let's test our similarity function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "94f8701d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[2023-07-05 13:18:09,021] INFO in posthog: Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
-      "[2023-07-05 13:18:09,040] INFO in ctypes: Successfully imported ClickHouse Connect C data optimizations\n",
-      "[2023-07-05 13:18:09,041] INFO in ctypes: Successfully import ClickHouse Connect C/Numpy optimizations\n",
-      "[2023-07-05 13:18:09,051] INFO in json_impl: Using python library for writing JSON byte strings\n",
-      "[2023-07-05 13:18:09,132] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 13:18:09,454] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.8258005976676941"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "measure_similarity((prompt_templates[0], user_inputs[0]), {\"choices\": [{\"text\": \"This is a test\"}, {\"text\": \"This is a text\"}]}, {})"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -402,10 +345,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-07-05 13:18:09,719] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 13:18:09,953] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 13:18:10,198] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 13:18:10,455] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
+      "[2023-07-05 15:08:51,242] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 15:08:51,469] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 15:08:51,723] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 15:08:51,968] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
      ]
     },
     {
@@ -439,30 +382,30 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe first President of the United States was George Washington.]</td>\n",
-       "      <td>3.667436</td>\n",
-       "      <td>0.275267</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.965657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad,]</td>\n",
-       "      <td>1.065293</td>\n",
-       "      <td>0.352304</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>1.021784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe first president of the United States was George Washington.]</td>\n",
-       "      <td>3.060034</td>\n",
-       "      <td>0.275267</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>0.965657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad.]</td>\n",
-       "      <td>1.239039</td>\n",
-       "      <td>0.348146</td>\n",
+       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>1.021784</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -475,17 +418,17 @@
        "2  Respond the following query: Who was the first president?              \n",
        "3  Respond the following query: Who was the first president of India?     \n",
        "\n",
-       "                                                             response(s)   \n",
-       "0  [\\n\\nThe first President of the United States was George Washington.]  \\\n",
-       "1  [\\n\\nThe first President of India was Dr. Rajendra Prasad,]             \n",
-       "2  [\\n\\nThe first president of the United States was George Washington.]   \n",
-       "3  [\\n\\nThe first President of India was Dr. Rajendra Prasad.]             \n",
+       "                                                  response(s)   latency   \n",
+       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000005  \\\n",
+       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
+       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
+       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
        "\n",
-       "    latency  similar_to_expected  \n",
-       "0  3.667436  0.275267             \n",
-       "1  1.065293  0.352304             \n",
-       "2  3.060034  0.275267             \n",
-       "3  1.239039  0.348146             "
+       "   similar_to_expected  \n",
+       "0  0.965657             \n",
+       "1  1.021784             \n",
+       "2  0.965657             \n",
+       "3  1.021784             "
       ]
      },
      "metadata": {},
