Add force reinstall to notebooks

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "edfec7c8",
    "metadata": {},
@@ -207,10 +209,11 @@
     }
    ],
    "source": [
-    "!pip install prompttools"
+    "!pip install --force-reinstall prompttools"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -219,6 +222,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
@@ -240,6 +244,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -261,6 +266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -269,6 +275,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -288,6 +295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -306,6 +314,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -325,6 +334,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -345,6 +355,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
@@ -353,6 +364,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -396,6 +408,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
