Refactor import path for ease of use

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -260,9 +260,7 @@
    "outputs": [],
    "source": [
     "from typing import Dict\n",
-    "from prompttools.harness.prompt_template_harness import (\n",
-    "    PromptTemplateExperimentationHarness,\n",
-    ")"
+    "from prompttools.harness import PromptTemplateExperimentationHarness"
    ]
   },
   {
