--- a/examples/notebooks/BasicExperiment.ipynb
+++ b/examples/notebooks/BasicExperiment.ipynb
@@ -260,7 +260,7 @@
    "outputs": [],
    "source": [
     "from typing import Dict, List, Tuple\n",
-    "from prompttools.experiment.openai_chat_experiment import OpenAIChatExperiment"
+    "from prompttools.experiment import OpenAIChatExperiment"
    ]
   },
   {
