--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -259,9 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.harness.chat_model_comparison_harness import (\n",
-    "    ChatModelComparisonHarness,\n",
-    ")"
+    "from prompttools.harness import ChatModelComparisonHarness"
    ]
   },
   {
