--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -259,9 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.harness.prompt_template_harness import (\n",
-    "    PromptTemplateExperimentationHarness,\n",
-    ")"
+    "from prompttools.harness import PromptTemplateExperimentationHarness"
    ]
   },
   {
