--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "!pip install --force-reinstall prompttools"
+    "!pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
