--- a/examples/notebooks/LlamaCppExperiment.ipynb
+++ b/examples/notebooks/LlamaCppExperiment.ipynb
@@ -54,7 +54,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments"
    ]
   },
@@ -103,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_paths = ['/your/local/model']\n",
+    "model_paths = ['/your/local/model']  # Such as, \"./models/LLaMa-7B-GGML/llama-7b.ggmlv3.q2_K.bin\"\n",
     "prompts = [\n",
     "    \"Who was the first president?\",\n",
     "    \"Who was the first president of India?\",\n",
