--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -260,7 +260,8 @@
    "outputs": [],
    "source": [
     "from typing import Dict\n",
-    "from prompttools.harness import PromptTemplateExperimentationHarness"
+    "from prompttools.harness import PromptTemplateExperimentationHarness\n",
+    "from prompttools.experiment import OpenAICompletionExperiment"
    ]
   },
   {
@@ -308,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(\"text-davinci-003\", prompt_templates, user_inputs)"
+    "harness = PromptTemplateExperimentationHarness(OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs)"
    ]
   },
   {
