--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -27,6 +29,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -35,6 +38,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -63,10 +67,11 @@
    "outputs": [],
    "source": [
     "from typing import Dict, List, Tuple\n",
-    "from prompttools.experiment.huggingface_hub_experiment import HuggingFaceHubExperiment"
+    "from prompttools.experiment import HuggingFaceHubExperiment"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -75,6 +80,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -101,6 +107,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -119,6 +126,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -127,6 +135,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
@@ -166,6 +175,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
@@ -182,7 +192,7 @@
    },
    "outputs": [],
    "source": [
-    "experiment.evaluate(\"similar_to_expected\", measure_similarity)\n"
+    "experiment.evaluate(\"similar_to_expected\", measure_similarity)"
    ]
   },
   {
