--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -259,7 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.harness import PromptTemplateExperimentationHarness"
+    "from prompttools.harness import PromptTemplateExperimentationHarness\n",
+    "from prompttools.experiment import OpenAICompletionExperiment"
    ]
   },
   {
@@ -307,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = PromptTemplateExperimentationHarness(\"text-davinci-003\", prompt_templates, user_inputs)"
+    "harness = PromptTemplateExperimentationHarness(OpenAICompletionExperiment, \"text-davinci-003\", prompt_templates, user_inputs)"
    ]
   },
   {
