Add structured inputs

--- a/examples/notebooks/StructuredOutput.ipynb
+++ b/examples/notebooks/StructuredOutput.ipynb
@@ -6,7 +6,7 @@
    "id": "c02b0509",
    "metadata": {},
    "source": [
-    "# Semantic Similarity Example"
+    "# Structured Output Example"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
@@ -105,8 +105,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
-    "user_inputs = [{\"input\": \"Who was the first president?\"}, {\"input\": \"Who was the first president of India?\"}]"
+    "prompt_templates = [\"Generate valid JSON from the following input: {{input}}\", \"Generate valid python to complete the following task: {{input}}\"]\n",
+    "user_inputs = [{\"input\": \"The task is to count all the words in a string\"}, {\"input\": \"The task is to add up numbers 1 to 100\"}]"
    ]
   },
   {
@@ -129,7 +129,9 @@
     "                                               \"text-davinci-003\", \n",
     "                                               prompt_templates, \n",
     "                                               user_inputs,\n",
-    "                                               model_arguments={\"temperature\": 0.9})"
+    "                                               # Zero temperature is better for\n",
+    "                                               # structured outputs\n",
+    "                                               model_arguments={\"temperature\": 0})"
    ]
   },
   {
@@ -188,7 +190,7 @@
    "id": "bebb8023",
    "metadata": {},
    "source": [
-    "To evaluate the results, we'll define an eval function. We can use semantic distance to check if the model's response is similar to our expected output."
+    "To evaluate the results, we'll define an eval function. We can use the json and python utilities to validate our responses."
    ]
   },
   {
@@ -198,29 +200,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.utils import similarity\n",
-    "\n",
-    "\n",
-    "EXPECTED = {\"Who was the first president?\": \"George Washington\",\n",
-    "            \"Who was the first president of India?\": \"Rajendra Prasad\"}\n",
+    "from prompttools.utils import json\n",
+    "from prompttools.utils import python\n",
     "\n",
     "def extract_responses(output) -> str:\n",
-    "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
+    "    rsps = [choice[\"text\"].strip() for choice in output[\"choices\"]]\n",
+    "    return rsps\n",
     "\n",
     "\n",
-    "def measure_similarity(\n",
+    "def is_json(\n",
     "    input_pair: Tuple[str, Dict[str, str]], results: Dict, metadata: Dict\n",
     ") -> float:\n",
     "    \"\"\"\n",
     "    A simple test that checks semantic similarity between the user input\n",
     "    and the model's text responses.\n",
     "    \"\"\"\n",
-    "    distances = [\n",
-    "        similarity.compute(EXPECTED[input_pair[1][\"input\"]], response)\n",
-    "        for response in extract_responses(results)\n",
-    "    ]\n",
-    "    return min(distances)\n",
-    "    \n"
+    "    validations = [json.validate(response) for response in extract_responses(results)]\n",
+    "    return min(validations)\n",
+    "\n",
+    "def is_python(\n",
+    "    input_pair: Tuple[str, Dict[str, str]], results: Dict, metadata: Dict\n",
+    ") -> float:\n",
+    "    \"\"\"\n",
+    "    A simple test that checks semantic similarity between the user input\n",
+    "    and the model's text responses.\n",
+    "    \"\"\"\n",
+    "    validations = [python.validate(response) for response in extract_responses(results)]\n",
+    "    return min(validations)\n"
    ]
   },
   {
@@ -236,25 +242,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "233f25a6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "harness.evaluate(\"similar_to_expected\", measure_similarity)\n",
+    "harness.evaluate(\"is_json\", is_json)\n",
+    "harness.evaluate(\"is_python\", is_python)\n",
     "harness.visualize()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6173e5f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c8c36bd",
+   "id": "7d282f31",
    "metadata": {},
    "outputs": [],
    "source": []
