Use autoeval utility

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -194,32 +194,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openai\n",
-    "import jinja2\n",
-    "\n",
-    "EVALUATION_TEMPLATE=\"\"\"\n",
-    "Determine whether or not the response is following directions.\n",
-    "Your answer should either be \"RIGHT\" if the response follows directions,\n",
-    "or \"WRONG\" if the model is not following directions.\n",
-    "\n",
-    "Write your answer here:\n",
-    "PROMPT: {{prompt}}\n",
-    "RESPONSE: {{response}}\n",
-    "ANSWER: \n",
-    "\"\"\"\n",
+    "from prompttools.utils import autoeval\n",
     "\n",
     "def extract_responses(output) -> str:\n",
     "    return [choice[\"text\"] for choice in output[\"choices\"]]\n",
     "\n",
     "def auto_eval(prompt: str, results: Dict, metadata: Dict) -> float:\n",
-    "    environment = jinja2.Environment()\n",
-    "    template = environment.from_string(EVALUATION_TEMPLATE)\n",
     "    responses = extract_responses(results)\n",
-    "    prompts = [template.render({\"prompt\": prompt, \n",
-    "                                \"response\": response}) for response in responses]\n",
-    "    evals = [openai.Completion.create(model=\"text-davinci-003\",\n",
-    "                                      prompt=prompt) for prompt in prompts]\n",
-    "    return float(sum([1 if 'RIGHT' in e['choices'][0]['text'] else 0 for e in evals]))"
+    "    return float(sum([autoeval.compute(prompt, response) for response in responses]))"
    ]
   },
   {
