Fix ModelComparison example

--- a/examples/notebooks/ModelComparison.ipynb
+++ b/examples/notebooks/ModelComparison.ipynb
@@ -75,8 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prompttools.harness import ChatModelComparisonHarness\n",
-    "from prompttools.experiment import OpenAIChatExperiment"
+    "from prompttools.harness import ChatModelComparisonHarness"
    ]
   },
   {
@@ -126,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness = ChatModelComparisonHarness(OpenAIChatExperiment, [\"gpt-3.5-turbo\", \"gpt-3.5-turbo-0613\"], chat_histories)"
+    "harness = ChatModelComparisonHarness([\"gpt-3.5-turbo\", \"gpt-3.5-turbo-0613\"], chat_histories)"
    ]
   },
   {
