--- a/examples/notebooks/HuggingFaceHub.ipynb
+++ b/examples/notebooks/HuggingFaceHub.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0a13ddc8",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "623f0cfe",
    "metadata": {},
@@ -25,11 +23,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install --quiet --force-reinstall prompttools"
+    "# !pip install --quiet --force-reinstall prompttools"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2eac35f8",
    "metadata": {},
@@ -38,7 +35,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5edba05a",
    "metadata": {},
@@ -71,7 +67,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -80,7 +75,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -107,7 +101,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -126,7 +119,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "266c13eb",
    "metadata": {},
@@ -135,7 +127,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bebb8023",
    "metadata": {},
@@ -175,7 +166,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "974d6065",
    "metadata": {},
